# tevel-dashboard

./: .env  .gitignore  echo.c  eslint.config.js  eslint.config.ts  package-lock.json  package.json  structs.def  structs.json  test.c  tsconfig.json  vite.config.ts
backend/: CMakeLists.txt  Cargo.toml
backend/compiler/: Cargo.toml
backend/compiler/src/: definition.rs  diagnostics.rs  lib.rs  main.rs
backend/compiler/src/checks/: mod.rs  recursion.rs
backend/compiler/src/syntax/: lexer.rs  parser.rs
backend/src/: main.c  main.rs  static_files.rs
backend/src/api/: mod.rs  tcp_proxy.rs
backend/src/api/endnode/: mod.rs
backend/src/api/endnode/protocols/: ax25.rs  kiss.rs  mod.rs
compiler/: Cargo.toml
compiler/src/: checks.rs  definition.rs  lexer.rs  lib.rs  main.rs  parser.rs  tokenizer.rs  writer.rs
compiler/src/checks/: usage.rs
compiler/src/syntax/: mod.rs
frontend/: index.html
frontend/public/: struct.def  struct.json
frontend/src/: App.tsx  BufferViewer.tsx  Layout.tsx  StructBuilder.tsx  expr.ts  grammer.pegjs  index.css  main.tsx  state.ts
frontend/src/components/: BufferViewer.css  BufferViewer.tsx  StructBuilder.css  StructBuilder.tsx  StructViewer.css  StructViewer.tsx  shared.css
frontend/src/contexts/: ExprContext.ts  ThemeContext.tsx  ThemeProvider.tsx  WebSocketContext.tsx  WebSocketProvider.tsx
frontend/src/layout/: AppHeader.tsx  ContentArea.tsx  Layout.tsx  Sidebar.tsx  diagnostics.css
frontend/src/pages/: HistoryPage.css  HistoryPage.tsx  SendPage.css  SendPage.tsx
frontend/src/styles/: theme.css
frontend/src/utils/: Bits.ts  hebrew.ts
public/: struct.def
src/: App.css  App.tsx  BufferViewer.css  BufferViewer.tsx  StructBuilder.css  StructBuilder.tsx  buildValueFromForm.ts  encodeValue.ts  expr.ts  grammer.pegjs  main.tsx
