[package]
name = "websocket_frontend_server"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing-subscriber = "0.3"

rust-embed = {version = "8", optional = true}
mime_guess = {version = "2", optional = true}


notify = {version = "8.0", optional = true}
base64 = {version = "0.22", optional = true}
type_expr_compiler = { path = "../compiler" ,optional = true}
parking_lot = "0.12"
serde_json = {version = "1", optional = true}
futures = {version = "0.3", optional = true}
[features]
default = []

api = ["type_expr_compiler", "notify", "base64", "futures", "serde_json"]
static-files = ["rust-embed", "mime_guess"]
