[package]
name = "compiler"
version = "0.1.0"
edition = "2024"
description = "A typed struct/match/enum parser and compiler to JSON"
license = "MIT OR Apache-2.0"

[lib]

[dependencies]
codespan-reporting = { git = "https://github.com/urisinger/codespan-style-writer.git"}
chumsky = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
indexmap = "2.9.0"
